# ABNER

./: Makefile  Makefile.am  Makefile.in  android-build.sh  build.gradle  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  rawsocket  rawsocket.c  rawsocket.c.bak
.deps/: rawsocket.Po
app/: build.gradle
app/src/androidTest/java/com/example/hnc/implement/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/java/com/example/hnc/implement/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/hnc/implement/: ExampleUnitTest.java
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
gradle/wrapper/: gradle-wrapper.properties
